# dpdk-learning

./: README.md
DPDK基础学习/: DPDK基础入门（一）：认识和理解DPDK.md  DPDK基础入门（七）：网卡性能优化.md  DPDK基础入门（三）：并行计算.md  DPDK基础入门（九）：硬件加速与功能卸载.md  DPDK基础入门（二）：Cache与大页优化.md  DPDK基础入门（五）：报文转发.md  DPDK基础入门（八）：多队列和流分类.md  DPDK基础入门（六）：从PCIe事务的角度看包处理.md  DPDK基础入门（十）：虚拟化.md  DPDK基础入门（四）：从源码角度解析同步互斥机制.md
simple app/recv/: CMakeLists.txt  README.md  recv.c
simple app/send/: CMakeLists.txt
simple-app/dns/: CMakeLists.txt  dns.c  dns.h  server.c
simple-app/ping/: CMakeLists.txt  ping.c
simple-app/send/: send.c
环境配置/: Linux Ubuntu 20.04 netmap安装.md  Linux Ubuntu 20.04 初步安装dpdk.md
